date and time audit added

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
     "typeAcquisition": {
         "include": [
             "jquery",
-            "jqueryui"
+            "jqueryui",
+            "moment"
         ]
     }
 
